# cgpsc-intelligence

./: LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/routers/: analytics.py  chat.py  mock.py  personas.py
cgpsc/api/routes/: chat.py  mock.py
cgpsc/intelligence/: __init__.py  analytics_engine.py  embeddings.py  mock_generator.py  ollama_client.py  personas.py  rag.py  rag_engine.py
data/: README.md
data/sample/: sample_questions.json
frontend/: streamlit_app.py
scripts/: ingest_pyqs.py
