[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgpsc-intelligence"
version = "0.1.0"
description = "Open-source CGPSC Intelligence Engine: Analytics, Mock Generation, and RAG with pluggable personas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "chromadb",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cgpsc*"]
