[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgpsc-intelligence"
version = "0.2.0"
description = "Production-grade CGPSC Intelligence Engine: FastAPI + Streamlit, Advanced RAG, Analytics, Smart Mocks & AI Tutor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.38.0",
    "pydantic>=2.9.0",
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cgpsc*", "app*", "frontend*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100